--- a/admin/src/pages/product/product.css
+++ b/admin/src/pages/product/product.css
@@ -125,6 +125,6 @@
   border-radius: 5px;
   background-color: darkblue;
   color: white;
-  font-weight: bold;
+  font-weight: 600;
   cursor: pointer;
 }
